Mon Jun 17 16:59:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c: use rb_sprintf(), rb_id2str(), and
	  rb_intern_str() instead of rb_intern() and RSTRING_PTR() with
	  RB_GC_GUARD(), to prevent temporary objects from GC.
	  [ruby-core:39000] [Bug #5199]

Mon Jun 17 14:27:54 2013  Zachary Scott  <zachary@zacharyscott.net>

	* vm_backtrace.c: Update rdoc for Backtrace#label with @_ko1

Mon Jun 17 13:04:01 2013  Akinori MUSHA  <knu@iDaemons.org>

	* tool/ifchange (until): Fix the condition, although harmless in
	  this case.

Mon Jun 17 11:50:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_maybe): added. check `is_pointer_to_heap()' and
	  type is not T_ZOMBIE.

	* gc.c: use `gc_mark_maybe()'. T_ZOMBIE objects should not be pushed
	  to the mark stack.

Mon Jun 17 07:56:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_lshift): Renamed from bdigs_small_lshift.
	  (bary_small_rshift): Renamed from bdigs_small_rshift.

Mon Jun 17 07:38:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): Removed.
	  (rb_absint_numwords): Don't call absint_numwords_bytes.

Sun Jun 16 23:14:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_ADD): New macro.
	  (BARY_SUB): Ditto.
	  (BARY_MUL): Ditto.
	  (BARY_DIVMOD): Ditto.
	  (BARY_ZERO_P): Ditto.
	  (absint_numwords_generic): Use these macros.

Sun Jun 16 21:41:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Extracted from get2comp.
	  (integer_unpack_num_bdigits): Extracted from
	  rb_integer_unpack_internal.
	  (bary_unpack_internal): Renamed from bary_unpack and support
	  INTEGER_PACK_2COMP.
	  (bary_unpack): New function to validate arguments and invoke
	  bary_unpack_internal.
	  (rb_integer_unpack_internal): Removed.
	  (rb_integer_unpack): Invoke bary_unpack_internal.
	  (rb_integer_unpack_2comp): Removed.

	* internal.h (rb_integer_unpack_2comp): Removed.

	* pack.c: Follow the above change.
